--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,24 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+/.idea/
+/.ipynb_checkpoints/
+/assets
+**/.idea/
+**/.ipynb_checkpoints/
+**/assets/
+*.pickle
+*.zip
+*.pyc
+*.csv
+*.pkl
+*.tsv
+*.gz
+*.tgz
+*.json
+*.txt
+*.ipynb_checkpoints
+**/*checkpoint.ipynb
+**/-checkpoint.ipynb
+**/altair-data-*.json
